--- a/style.css
+++ b/style.css
@@ -49,6 +49,10 @@ nav {
     position: sticky;
     height: 7rem;
     width: 100%;
+    visibility: hidden;
+}
+.navbar {
+    visibility: visible;
 }
 
 .logo {
@@ -488,17 +492,16 @@ span {
   opacity: 0;
   visibility: hidden;
 }
-
 .loader::after {
   content: "";
-  height: 25px;
-  width: 25px;
-  border: 3px solid #131212;
+  height: 20px;
+  width: 20px;
+  border: 3px solid #11276a;
   border-top: 3px solid transparent;
+  border-bottom: 3px solid transparent;
   border-radius: 50%;
   -webkit-animation: spin 0.75 linear infinite;
   animation: spin 0.75s linear infinite;
-
 }
 @keyframes spin {
   from {transform: rotate(0deg);}
