--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+#projects, #contact {
+    display: none;
+}
+#main-intro {
+    display: block;
+}
+.projects, .contact{
+    margin-top: -10rem;
+}
+#about {
+    color: #F1C500;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -76,11 +89,15 @@ nav ul li {
     margin: 0 1rem;
 }
 
-nav ul li a {
+.nav-link {
     color: #f8f8f8;
     font-size: 1.6rem;
     text-transform: uppercase;
     padding: 1px 2rem;
+}
+
+.nav-link:hover {
+    cursor: pointer;
 }
 
 a:hover, a.active {
@@ -93,18 +110,15 @@ a:hover, a.active {
     line-height: 7rem;
     margin-right: 2rem;
     float: right;
-    display: none
-}
-
-#exit-icon {
-    font-size: 2.8rem;
-    line-height: 7rem;
-    margin-right: 2rem;
-    float: right;
     display: none;
 }
 
-
+.exit-icon {
+    font-size: 3rem;
+    top: 0;
+    float: right;
+    display: none
+}
 
 /* name and pic section styling */
 .home {
@@ -282,15 +296,6 @@ span {
     flex-wrap: wrap;
     gap: 2rem;
 }
-
-
-/* #################################### */
-/* ------- Hide the proj div ---------- */
-/* #################################### */
-/* .projects {
-    display: none;
-} */
-
 
 .proj-container .proj-box {
     width: 33rem;
@@ -576,16 +581,19 @@ span {
     #menu-icon {
         display: block;
     }
-     .nav-menu {
+    .nav-menu {
         position: fixed;
         width: 100%;
         height: 100vh;
         background-color: #333b4a;
-        top: 7rem;
+        top: 7; 
         left: -100%;
         text-align: center;
         padding-top: 10rem;
         transition: all .3s ease;
+    }
+     .nav-menu .exit-icon {
+        top: 0;
      }
      .nav-menu li {
         display: block;
@@ -597,10 +605,6 @@ span {
      }
     .nav-menu.active {
         left: 0;
-     }
-
-     .exit-icon.acitve {
-        display: block;
      }
      .footer .footer-social-media {
         margin-left: 2%;
