--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: "black";
+  background-color: black;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
