--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 /*  ==========================================================================================
                                         General Styling
-    ========================================================================================== */
-
+    ========================================================================================== */  
 
 body {
   padding: 0;
@@ -22,6 +21,14 @@ header {
 h2 { 
   margin-bottom: 20px;
 }
+#parameters {
+  margin-left: 3rem;
+  width: 22rem;
+}
+#parameters h2 {
+  width: 22rem;
+  margin-bottom: 2.5rem;
+}
 
 /*sets an extra wide margin for div elements on large devices*/
 @media screen and (min-height: 825px) {
@@ -37,6 +44,7 @@ h2 {
     margin-bottom: max(25px, 1.75%);
   }
 }
+
 
 /*footer background: set color and position*/
 footer {
@@ -71,7 +79,6 @@ footer p {
 
 /*indent certain paragraphs of text*/
 .indent p {
-  margin-left: 30px;
   margin-right: 4%;
 }
 
@@ -245,11 +252,13 @@ img iframe {
     ========================================================================================== */
 
 /*Bootstrapped title: add background and shadows*/
-.jumbotron-title {
+#res-title {
   padding: 50px;
-  background-color: #a2afbd;
   text-align: center;
   color: #0b0c0e;
+  background-color: transparent;
+  box-shadow: none;
+  letter-spacing: 13px;
 }
 
 /*center the buttons*/
@@ -313,21 +322,22 @@ img iframe {
   margin-left: 30px;
   margin-right: 4%;
 }
-
-/* changing title styling */
-#res-title {
-  background-color: transparent;
-  box-shadow: none;
-  letter-spacing: 13px;
-}
-
 /* font-size for texts "Assessment Outcomes" and "Graph"  */
 .title-text {
   font-size: 3.5vmin;
 }
+
+#graph-res-title{
+  padding: 50px;
+  text-align: center;
+  color: #0b0c0e;
+  background-color: transparent;
+  box-shadow: none;
+  letter-spacing: 13px;
+}
 /* the line under the "Results" text  */
-#res-title hr {
-  width: 50%;
+#graph-res-title hr {
+  width: 40%;
   margin: 0px auto;
 }
 /* style for Result header section */
@@ -408,48 +418,185 @@ img iframe {
   padding: auto;
 }
 
-/*  ==========================================================================================
+/*==========================================================================================
                                         loader styling
-    ========================================================================================== */
+========================================================================================== */
+.loader {
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  position: fixed;
+  background-color: rgb(249, 252, 255);
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.75s, visibility 0.75s;
+}
+
+.loader-hidden {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.loader::after {
+  content: "";
+  height: 25px;
+  width: 25px;
+  border: 3px solid #131212;
+  border-top: 3px solid transparent;
+  border-radius: 50%;
+  -webkit-animation: spin 0.75 linear infinite;
+  animation: spin 0.75s linear infinite;
+
+}
+@keyframes spin {
+  from {transform: rotate(0deg);}
+  to {transform: rotate(360deg);}
+}
+
+/* for safari */
+@-webkit-keyframes spin {
+  from {transform: rotate(0deg);}
+  to {transform: rotate(360deg);}
+}
 
 
-    .loader {
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      display: flex;
-      position: fixed;
-      background-color: rgb(249, 252, 255);
-      justify-content: center;
-      align-items: center;
-      transition: opacity 0.75s, visibility 0.75s;
-    }
-    
-    .loader-hidden {
-      opacity: 0;
-      visibility: hidden;
-    }
-    
-    .loader::after {
-      content: "";
-      height: 25px;
-      width: 25px;
-      border: 3px solid #131212;
-      border-top: 3px solid transparent;
-      border-radius: 50%;
-      -webkit-animation: spin 0.75 linear infinite;
-      animation: spin 0.75s linear infinite;
-    
-    }
-    @keyframes spin {
-      from {transform: rotate(0deg);}
-      to {transform: rotate(360deg);}
-    }
-    
-    /* for safari */
-    @-webkit-keyframes spin {
-      from {transform: rotate(0deg);}
-      to {transform: rotate(360deg);}
-    }
-    
+/* ##################################### */
+/* ---------responsive styling---------- */
+/* ##################################### */
+@media (max-width: 952px) {
+  header h1 {
+    margin-top: 2rem;
+  }
+  #par_stim {
+    display: block;
+  }
+  #new-video-box h2 {
+    width: 15rem;
+    margin-bottom: 0.5rem;
+  }
+  .vid_bnk_title {
+    font-size: 1.3rem;
+  }
+  #parameters h2 {
+    width: 19rem;
+    margin-top: -3rem;
+  }
+  #start-button {
+    display: block;
+    text-align: center;
+  }
+  .both-btn {
+    margin-bottom: 0.5rem;
+  }
+  #parameters {
+    margin-left: 0;
+    width: 22rem;
+    padding-bottom: 3rem;
+  }
+  #parameters h2 {
+    width: 22rem;
+    margin-bottom: 1.2rem;
+  }
+}
+
+@media (max-width: 768px) {
+  header h1 {
+    margin-top: 2rem;
+  }
+  #par_stim {
+    display: block;
+  }
+  #new-video-box h2 {
+    width: 15rem;
+    margin-bottom: 0.5rem;
+  }
+  .vid_bnk_title {
+    font-size: 1.3rem;
+  }
+  #parameters h2 {
+    width: 19rem;
+    margin-top: -3rem;
+  }
+  #start-button {
+    display: block;
+    text-align: center;
+  }
+  .both-btn {
+    margin-bottom: 0.5rem;
+  }
+  #parameters {
+    margin-left: 0;
+    width: 22rem;
+    padding-bottom: 3rem;
+  }
+  #parameters h2 {
+    width: 22rem;
+    margin-bottom: 1.2rem;
+  }
+   .decision {
+    align-items: center;
+    text-align: center;
+   }
+   #res-title {
+    text-align: center;
+    align-items: center;
+   }
+   #res-title h1 {
+    letter-spacing: 3px;
+
+    margin: 1rem auto -3rem auto;
+    width: 27rem;
+   }
+   .decision-buttons {
+    margin-bottom: 0.2rem;
+   }
+}
+
+/* -----------for cell phones----------- */
+@media  (max-width: 480px) {
+  /* result page */
+  #first-sec{
+    width: 20rem;
+    align-items: center;
+    text-align: center;
+    margin-top: 3rem;
+  } 
+  section {
+    align-items: center;
+    text-align: center;
+  }
+  #both-box {
+    width: 30rem;
+  }
+  #graph-res-title {
+    margin: -4rem auto -3rem auto;
+  }
+  #graph-res-title h1 {
+    letter-spacing: 7px;
+    font-size: 2rem;
+  }
+
+  /* decision page */
+  #vid-bnk {
+    margin-top: -5rem;
+  }
+  .decision {
+    align-items: center;
+    text-align: center;
+  }
+  #res-title {
+    text-align: center;
+  }
+  #res-title h1 {
+    letter-spacing: 2px;
+    margin: 5rem auto -3rem -6%;
+    width: 22rem;
+  }
+  .decision-buttons {
+    margin-bottom: -2rem;
+  }
+}
+
+/*=================== new styling END ==================== */
