--- a/css/styles.css
+++ b/css/styles.css
@@ -548,6 +548,99 @@ header h1 {
 }
 }
 
+@media (max-width: 1200px) {
+  /* index page */
+  header {
+    text-align: center;
+  }
+  /* header title */
+  header h1 {
+    margin-top: 2rem;
+  }
+  /* text indents */
+  .indent {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+  .indent p {
+    margin: 0 auto;
+    text-align: justify;
+    align-items: center;
+    padding: 1rem auto;
+  }
+  /* instruction text */
+  .inst-text {
+    margin-top: 1rem;
+    margin-bottom: -0.09rem;
+    margin-left: 0rem;
+  }
+  /* add new stim & assess parameter div as flex */
+  #par_stim {
+    display: flex;
+    flex-wrap: wrap;
+    width: 40rem;
+  }
+  /* add new stimulu */
+  #new-video-box {
+    width: 18rem;
+  }
+  #new-video-box h2 {
+    font-size: 1.7rem;
+    width: 14rem;
+    margin-bottom: 0.5rem;
+  }
+  #parameters {
+    width: 21rem;
+    margin-left: 0.5rem;
+  }
+  #parameters h2 {
+    font-size: 1.7rem;
+    width: 21rem;
+    margin-bottom: 1.2rem;
+  }
+  .vid_bnk_title {
+    font-size: 1.3rem;
+    text-align: center;
+  }
+  #start-button {
+    display: block;
+    text-align: center;
+  }
+  .both-btn {
+    margin-bottom: 0.5rem;
+  }
+
+  /* result page  */
+  /* div for chart */
+  .results section {
+    width: 85%;
+    margin: 0px auto;
+  }
+  .results .row {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    margin-top: -2rem;
+  }
+  .results #col1, .results #col2{
+    width: 29rem;
+    margin: 1rem auto;
+    display: flex;
+    flex-direction: column;
+  }
+  .results #chart-div {
+    margin: 0px auto;
+    height: auto;
+    width: 29rem;
+    padding: 2rem 0 0.9rem 1rem;
+  }
+
+  #graph-res-title h1 {
+    letter-spacing: 7px;
+    font-size: 2rem;
+  }
+ }
+
 @media (max-width: 1024px){
   /* index page */
   header {
