--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: black;
+  background-color: green;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
