--- a/css/styles.css
+++ b/css/styles.css
@@ -485,7 +485,7 @@ img iframe {
 /* ##################################### */
 /* ---------responsive styling---------- */
 /* ##################################### */
-@media (max-width: 1400px) {
+@media only screen and  (max-width: 1400px) {
  /* index page */
  header {
   text-align: center;
@@ -548,7 +548,7 @@ header h1 {
 }
 }
 
-@media (max-width: 1200px) {
+@media only screen and  (max-width: 1200px) {
   /* index page */
   header {
     text-align: center;
@@ -641,7 +641,7 @@ header h1 {
   }
  }
 
-@media (max-width: 1024px){
+ @media only screen and  (max-width: 1024px){
   /* index page */
   header {
     text-align: center;
@@ -734,7 +734,7 @@ header h1 {
   }
 }
 
-@media (max-width: 952px) {
+@media only screen and  (max-width: 820px) {
   header h1 {
     margin-top: 2rem;
   }
@@ -762,6 +762,7 @@ header h1 {
   }
   #parameters {
     margin-left: 0;
+    margin-top: 4rem;
     width: 22rem;
     padding-bottom: 3rem;
   }
@@ -797,7 +798,7 @@ header h1 {
   }
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   /* index page */
   header h1 {
     margin-top: 2rem;
@@ -880,7 +881,7 @@ header h1 {
 }
 
 /* -----------for cell phones----------- */
-@media  (max-width: 480px) {
+@media only screen and  (max-width: 480px) {
   /* index page */
   header {
     text-align: center;
