--- a/css/styles.css
+++ b/css/styles.css
@@ -489,6 +489,7 @@ img iframe {
  /* index page */
  header {
   text-align: center;
+  background-color: pink;
 }
 /* header title */
 header h1 {
@@ -552,6 +553,7 @@ header h1 {
   /* index page */
   header {
     text-align: center;
+    background-color: purple;
   }
   /* header title */
   header h1 {
@@ -645,6 +647,7 @@ header h1 {
   /* index page */
   header {
     text-align: center;
+    background-color: yellow;
   }
   /* header title */
   header h1 {
@@ -737,6 +740,7 @@ header h1 {
 @media only screen and  (max-width: 820px) {
   header h1 {
     margin-top: 2rem;
+    background-color: gray;
   }
   #par_stim {
     display: block;
@@ -771,7 +775,6 @@ header h1 {
     margin-bottom: 1.2rem;
   }
 
-
    /* result page  */
   /* div for chart */
   .results section {
@@ -802,6 +805,7 @@ header h1 {
   /* index page */
   header h1 {
     margin-top: 2rem;
+    background-color: black;
   }
   #par_stim {
     display: block;
@@ -886,6 +890,7 @@ header h1 {
   header {
     text-align: center;
     width: 90%;
+    background-color: red;
   }
   header h1 {
     margin-top: 2rem;
