--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: black;
+  background-color: purple;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
