--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 }
 
 body {
+    /* background-color:#FFFFFF; */
     background-color: #263042;
 }
 
@@ -63,13 +64,11 @@ nav {
     position:sticky;
     height: 7rem;
     width: 100%;
+    /* background-color: #532E1F; */
     background-color: #263042;
     z-index: 100000;
 }
 
-nav.sticky { 
-    position: fixed;
-}
 
 .logo {
     width: 4rem;
@@ -347,10 +346,10 @@ span {
 }
 .row .contact-col {
     margin: 5px 10px;
-    padding: 15px;
-    max-width: 23rem;
+    padding: 2rem;
+    max-width: 25rem;
     min-width: 23rem;
-    height: 130px;
+    height: 150px;
     border: 0.2rem solid #5467858d;
     border-radius: 0.5rem;
     background-color: #2d38498d;
@@ -385,7 +384,7 @@ input:-webkit-autofill:active {
     position: relative;
 }
 .txt-area {
-    height: 17.2rem;
+    height: 17.3rem;
     resize: none;
     padding: 2rem;
 }
@@ -417,18 +416,20 @@ input:-webkit-autofill:active {
 .inputBox input:valid ~ label, .inputBox input:focus ~ label,
 .inputBox textarea:valid ~ label, .inputBox textarea:focus ~ label {
     top: 1px;
-    left: 5px;
+    left: 7px;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 
 
 .btn {
-    padding: 2rem;
+    padding: 1.2rem 2rem;
     margin-top: 3rem;
     width: auto;
     font-size: 1.8rem;
     color: #f8f8f8;
     background-color: #d3ac00;
-    border-radius: 1rem;
+    border-radius: 0.5rem;
     transition: width 0.5s, height 0.5s, transform 0.5s ease;
 }
 .btn:hover {
@@ -521,17 +522,6 @@ input:-webkit-autofill:active {
     .projects h1 {
         padding-top: 2rem;
     }
-    .row .contact-col {
-        max-width: 23rem;
-        min-width: 23rem;
-    }
-    .data,  .txt-area {
-        width: 33rem;
-    }
-    .btn {
-        margin-top: 0.2rem;
-        width: 17rem;
-    }
     .main-row {
         margin-bottom: -3rem;
     }
@@ -576,17 +566,6 @@ input:-webkit-autofill:active {
     .projects h1 {
         padding-top: 2rem;
     }
-    .row .contact-col {
-        max-width: 23rem;
-        min-width: 23rem;
-    }
-    .data,  .txt-area {
-        width: 33rem;
-    }
-    .btn {
-        margin-top: 0.2rem;
-        width: 17rem;
-    }
     .main-row {
         margin-bottom: -3rem;
     }
@@ -602,7 +581,6 @@ input:-webkit-autofill:active {
         width: 100%;
         height: 100vh;
         background-color: #263042;
-        /* background-color: #333b4a; */
         top: 7; 
         left: -100%;
         text-align: center;
@@ -623,6 +601,21 @@ input:-webkit-autofill:active {
     .nav-menu.active {
         left: 0;
      }
+     .row .contact-col {
+        max-width: 33rem;
+        min-width: 33rem;
+    }
+    .input-col {
+        width: 33rem;
+        position: relative;
+    }
+    .data, .txt-area {
+        max-width: 33rem;
+    }
+    .btn {
+        margin-top: 0.2rem;
+        width: 33rem;
+    }
      .footer .footer-social-media {
         margin-left: 2%;
     }
