--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 .about-link {
     color: #00abf0;
 }
-
 * {
     margin: 0;
     padding: 0;
@@ -20,7 +19,6 @@
     scroll-snap-align: smooth;
     font-family: 'Poppins';
 }
-
 body {
     background-color: #263042;
 }
@@ -118,11 +116,14 @@ nav ul {
     display: none;
 }
 
-.exit-icon {
-    font-size: 3rem;
-    top: 0;
+#exit-icon {
+    position: relative;
+    margin-top: -13rem;
+    font-size: 3.6rem;
+    line-height: 7rem;
+    margin-right: 2rem;
     float: right;
-    display: none
+    display: none;
 }
 
 /* =================  Home section ================= */
@@ -256,11 +257,10 @@ span {
     padding: 1rem auto;
 }
 
-.python, .js, .php, .jq, .bootstr {
+.skill, .c-icon {
     display: inline-block;
     width: 6rem;
     height: 6rem;
-    background-color: #00abf0;
     border-radius: 50%;
     font-size: 5rem;
     transition: 0.5s ease;
@@ -611,22 +611,24 @@ input:-webkit-autofill:active {
 
 
 @media (max-width: 768px) {
-    #menu-icon {
+    #menu-icon, #exit-icon {
         display: block;
     }
     .nav-menu {
         position: fixed;
         width: 100%;
-        height: 100vh;
+        height: 110%;
         background-color: #263042;
-        top: 7; 
-        left: -100%;
+        top: -5rem; 
+        left: 0;
         text-align: center;
-        padding-top: 10rem;
+        padding-top: 15rem;
         transition: all .3s ease;
+        display: none;
+        transition: all 1s ease-in-out;
     }
-     .nav-menu .exit-icon {
-        top: 0;
+    .nav-menu.active {
+        display: block;
      }
      .nav-menu li {
         display: block;
@@ -638,9 +640,7 @@ input:-webkit-autofill:active {
      .nav-link.hover, .nav-link.active {
         color:#00abf0;
      }
-    .nav-menu.active {
-        left: 0;
-     }
+
      .row .contact-col {
         width: 33rem;
     }
