--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ nav ul {
     justify-content: center;
     align-items: center;
     text-align: center;
+    font-weight: bold;
 }
 
 .nav-link {
@@ -240,14 +241,13 @@ span {
     position: absolute;
     left: 0;
     top: 0;
-    width: 0;
+    width: 100%;
     height: 100%;
-    background-color: #0d8fc2;
     transition: 0.5s;
     z-index: -1;
 }
 .main-intro .download:hover::before, .btn:hover::before{
-    width: 100%;
+    background-color: #00cf61;
 }
 
 /* ================= skills section styling ================= */
@@ -287,6 +287,7 @@ span {
     border: 0.2rem solid #5467858d;
     border-radius: 0.5rem;
     background-color: #2d38498d;
+    cursor: pointer;
     transition: width 0.5s, height 0.5s, transform 0.5s ease;
 }
 
@@ -295,15 +296,15 @@ span {
     position: absolute;
     left: 0;
     top: 0;
-    width: 0;
+    width: 100%;
     height: 100%;
-    background-color: #42536c8d;
     transition: 0.5s;
     z-index: -1;
 }
 
 .col:hover::before {
-    width: 100%;
+    background-color: #42536c8d;
+    transform:scale(0.8);
 }
 .col h1 {
     margin-top: -3rem;
@@ -390,14 +391,14 @@ span {
     position: absolute;
     left: 0;
     top: 0;
-    width: 0;
+    width: 100%;
     height: 100%;
-    background-color: #42536c8d;
     transition: 0.5s;
     z-index: -1;
 }
 .row .contact-col:hover::before {
-    width: 100%;
+    background-color: #42536c8d;
+    transform:scale(0.9);
 }
 #msg-disp {
     margin-bottom: 2rem;
